--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>React App</title>
   </head>
-  <body style="background: gray url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
-  width: 100%;
+  <body 
+  style="background: gray url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
   margin: 0;
   text-align: center;
   height: 300px;
- 
-  box-sizing: border-box;"> 
+  box-sizing: border-box;"
+  > 
   <div id="root"></div>
      
   </body>
